# Evaluaciones

./: README.MD
Primer_Corte/: CalcularMagnitud.cpp
Segundo_Corte/Proyecto/: CMakeLists.txt
Segundo_Corte/Proyecto/include/: PanelSolar.h
Segundo_Corte/Proyecto/src/: PanelSolar.cpp  main.cpp
